# astral-aggregator-v2

./: .cursorignore  .gitignore  README.md  main.py  pyproject.toml  simple_test.py  test_judiciary.py
.cursor/rules/: py.mdc
.github/: pull_request_template.md
app/: __init__.py  main.py
app/ai/: __init__.py  config.py
changes/: judiciary_uk_20250811_203648.json  judiciary_uk_20250811_203648.xlsx  judiciary_uk_20250811_212114.json  judiciary_uk_20250811_212114.xlsx  judiciary_uk_20250811_220537.json  judiciary_uk_20250811_220537.xlsx  judiciary_uk_20250811_222007.json  judiciary_uk_20250811_222007.xlsx  judiciary_uk_20250811_230002.json  judiciary_uk_20250811_230002.xlsx  judiciary_uk_20250812_180051.json  judiciary_uk_20250812_180051.xlsx  judiciary_uk_20250813_205450.json  judiciary_uk_20250813_205450.xlsx  judiciary_uk_20250814_231024.json  judiciary_uk_20250814_231024.xlsx  judiciary_uk_20250817_105128.json  judiciary_uk_20250817_105128.xlsx  waverley_gov_20250812_181426.json  waverley_gov_20250812_181426.xlsx  waverley_gov_20250813_205359.json  waverley_gov_20250813_205359.xlsx  waverley_gov_20250813_205846.json  waverley_gov_20250813_205846.xlsx  waverley_gov_20250814_230823.json  waverley_gov_20250814_230823.xlsx  waverley_gov_20250817_105430.json  waverley_gov_20250817_105430.xlsx
config/: file_management.yaml  sites.yaml  sites_example.yaml
docs/: DEMO_README.md
scripts/: change_detector.py  demo_pagination_system.py  detect_pagination.py  manage_large_files.py  run_demo.py
tests/: __init__.py  test_implementation.py  test_integration.py
(+29 files in other folders)
